turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:2: error: type mismatch;
 found   : Unit
 required: Function1[Int, _]
  forward(20), right(45)
         ^Kerr36:2: error: type mismatch;
 found   : Unit
 required: Function1[Int, _]
  forward(20), right(45)
                    ^